--- a/src/styles/reusables.css
+++ b/src/styles/reusables.css
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: column;
   max-width: 120rem;
-  margin: 4rem auto 1rem auto;
+  margin: 4rem auto 0 auto;
+  padding-bottom: 5rem;
 }
 
 .overlay {
